@startuml

title __INSERTREQUEST's Class Diagram__\n

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.insertRequest {
        class AddNewDiscount {
            - userID : String
            - flightID : String
            - discountStartDate : String
            - discountEndDate : String
            - discountPercentage : String
            + AddNewDiscount()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.insertRequest {
        class AddNewHotel {
            - hotelName : String
            - airport : int
            - liason : int
            - extendedDataInJSON : String
            + AddNewHotel()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.insertRequest {
        class AddNewLog {
            - userID : int
            - type : int
            - message : String
            - extendedDataInJSON : String
            + AddNewLog()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.insertRequest {
        class AddNewUser {
            - username : String
            - email : String
            - password : String
            + AddNewUser()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.insertRequest {
        class DisableBookingByID {
            - id : int
            + DisableBookingByID()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.insertRequest {
        abstract class InsertRequestHandler {
            # apiProperties : Properties
            # apiResponse : JSONObject
            # InsertRequestHandler()
            + requestIsSuccessful()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.insertRequest {
        interface InsertRequestTest {
            {abstract} + makeRequest()
            {abstract} + requestIsSuccessful()
        }
      }
    }
  }
  

  AddNewDiscount -up-|> InsertRequestHandler
  AddNewHotel -up-|> InsertRequestHandler
  AddNewLog -up-|> InsertRequestHandler
  AddNewUser -up-|> InsertRequestHandler
  DisableBookingByID -up-|> InsertRequestHandler
  InsertRequestHandler -up-|> InsertRequestTest
  InsertRequestHandler o-- Reader : myReader


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
